layout/css/custom.css
*{
  padding:0;
  margin:0;
}

.lazy{
	opacity:0;
}

#national-static-pie-mobile-content{
  display:none;
}

.readMore{
  text-align: center;
  color:#003366;
  cursor:pointer;
  
}

.mobile-UI-Container{
  display:flex;
  flex-direction:row;
}

.drop-downs{
  flex: 5;
  padding:0 5px;
}

.drop-downs select{
  width:100%;
  border-radius:0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position:relative;
  padding:0 5px;
}

.custom-select{
  position:relative;
}

.view-select{
  height:35px;
  margin-bottom:3px;
  font-size:1em;
}

.county-select{
  height:25px;
}

.drop-down-indicator{
  background:#c6c6c6;
  width:25px;
  position:absolute;
  right:0;
  top:0;
  z-index:1000;
  pointer-events:none;
  text-align:center;
}

.drop-down-indicator img{
  height:14px;
}

.view-custom-select .drop-down-indicator{
  height:35px;
}

.view-custom-select .drop-down-indicator img{
  margin-top:11px;
}

.county-custom-select .drop-down-indicator{
  height:25px;
}

.county-custom-select .drop-down-indicator img{
  margin-top:6px;
}

.drop-downs select,
.zoom-out-button{
  background: #f1f1f1;
  outline:none;
  border:none;
  cursor:pointer;
}

.zoom-out-button-container{
  flex:1;
  padding-right:5px;
}

.zoom-out-button{
  height:100%;
  width:100%;
}

.viz-text ul {
  padding-left: 20px;
  min-height: 20px;
  padding: 15px;
}

#wu-story{
  background:#fff;
  min-height: 100px;
  margin-top:20px;
}

#wu-story p{
  padding-top: 10px; 
  padding-bottom: 10px;
}

h2{
  font-size:1.17em;
}

h3{
  font-size:1em;
}

.story-one,
.story-two,
.story-three{
  margin-top:50px;
}

.story-three{
  margin-bottom:40px;
}

.side-by-side-left{
  padding:0 40px 0 10px;
}

#directions {
  padding-left: 20px;
  padding-right: 40px;
}

.caption p{
  font-size:0.9em;
  font-style: italic;
  text-align: center;
  color: rgb(137,137,137);
  line-height:1.5em;
  margin-top:20px;
  text-decoration:none;
}

.full-width,
.key-story-plot{
  margin:10px auto;
  padding:0 10px;
}

.key-story-plot img{
  width:100%;
}

.label-text {
  alignment-baseline: middle;
  font-family: arial,helvetica,"sans-serif";
  fill: #393939;
}

#button-background{
  fill:white;
  opacity:0.7;
  pointer-events:none;
}

.button rect:hover{
  opacity:1;
}

.button rect{		
  fill:white;			
}

/* mobile */
.button text{
  font-size:2.2em;
  dominant-baseline:central;
  pointer-events:none;
}
#legend-title{
  font-size:2em;
  font-weight:bold;
  pointer-events:none;
}
#legend-subtitle{
  font-size:1.4em;
  pointer-events:none;
}

#extras{
  background:rgb(240,240,240);
  padding:10px;
}

#data-collection p,
#references p{
  font-size:.8em;
}

@media screen and (min-width:600px){
  
  #national-static-pie-mobile-container{
    display:none;
  }
  
  .button text{
    font-size:1.3em;
    dominant-baseline:central;
    pointer-events:none;
  }
  #legend-title{
    font-size:1.3em;
    font-weight:bold;
    pointer-events:none;
  }
  #legend-subtitle{
    font-size:1.1em;
    pointer-events:none;
  }
  .mobile-UI-Container{
    display:none;
  }
  
  .side-by-side,
  #extras{
    display:flex;
    flex-direction:row;
    padding:10px;
  }
  
  .side-by-side-left{
    width: 50%;
  }
  
  .side-by-side-right{
    width: 40%;
    position: relative;
  }
  
  .caption p{
    text-align: left;
  }
  
  #pie-caption{
    position:absolute;
    margin:auto;
    padding:0 0;
    top:0; bottom:0; left:0; right:0;
    height:80px;
  }
  
  #data-collection{
    border-right:1px solid #000;
    margin-right:10px;
  }
  
  #data-collection,
  #references{
    flex:1;
  }
  
}

/* large screen definition as in main vizlab */
@media screen and (min-width: 1024px){
  #extras{
    width:940px;
  }
  
  .viz-text{
    width:960px;
    margin:20px auto 0 auto;
  } 
  
  .full-width,
  .key-story-plot{
    width:960px;
    margin:10px auto;
  }
}

/* really large desktop screens*/
@media screen and (min-width:1050px){
  #directions {
    width: 45%;
  }
}

